--- a/.github/workflows/notion_insert_mock.yml
+++ b/.github/workflows/notion_insert_mock.yml
@@ -20,9 +20,9 @@ jobs:
         run: |
           set -e
           python -m pip install --upgrade pip
-          # 必要パッケージを明示インストール（deep-translator を必ず入れる）
+          # 必須パッケージ（deep-translator を含む）
           python -m pip install feedparser deep-translator requests beautifulsoup4
-          # 依存の存在をその場で検証（無ければ即fail）
+          # 依存の存在を検証（無ければ即fail）
           python - <<'PY'
           import sys, pkgutil
           required = ["feedparser","deep_translator","requests","bs4"]
@@ -30,8 +30,6 @@ jobs:
           if missing:
               print("Missing modules:", ", ".join(missing), file=sys.stderr)
               sys.exit(1)
-          import deep_translator
-          print("deep_translator version:", getattr(deep_translator, "__version__", "unknown"))
           PY
 
       - name: Validate required secrets for MOCK
@@ -57,6 +55,13 @@ jobs:
           mkdir -p "$BACKUP_DIR"
           rsync -av --exclude "local_backups" ./ "$BACKUP_DIR"/
           echo "✅ Backup completed at $BACKUP_DIR"
+
+      - name: Python syntax check (preflight)
+        run: |
+          set -e
+          # 実行前に構文エラーを検出して即failさせる
+          python -m py_compile scripts/notion_mock.py
+          echo "✅ Syntax OK"
 
       - name: Run mock Notion insert
         env:
