--- a/.github/workflows/notion_insert_prod.yml
+++ b/.github/workflows/notion_insert_prod.yml
@@ -1,10 +1,10 @@
-name: Notion Insert prod
+name: Notion Insert Prod
 
 on:
   workflow_dispatch:
 
 jobs:
-  insert_production:
+  insert_prod:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -20,7 +20,9 @@ jobs:
         run: |
           set -e
           python -m pip install --upgrade pip
+          # 必須パッケージ（deep-translator を含む）
           python -m pip install feedparser deep-translator requests beautifulsoup4
+          # 依存の存在を検証（無ければ即fail）
           python - <<'PY'
           import sys, pkgutil
           required = ["feedparser","deep_translator","requests","bs4"]
@@ -30,21 +32,21 @@ jobs:
               sys.exit(1)
           PY
 
-      - name: Validate required secrets for PRODUCTION
+      - name: Validate required secrets for PROD
         env:
           _RSS_URL: ${{ secrets.RSS_URL }}
-          _DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
           _NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           _NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+          _SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: |
           set -e
-          for secret in _RSS_URL _NOTION_API_KEY _NOTION_DATABASE_ID; do
-            if [ -z "${!secret}" ]; then
-              echo "❌ Required secret is missing: $secret" >&2
+          for s in _RSS_URL _NOTION_API_KEY _NOTION_DATABASE_ID _SLACK_WEBHOOK_URL; do
+            if [ -z "${!s}" ]; then
+              echo "❌ Required secret is missing: ${s#_}" >&2
               exit 1
             fi
           done
-          echo "✅ All required secrets for PRODUCTION are present."
+          echo "✅ All required secrets for PROD are present. (DEEPL_API_KEY is optional)"
 
       - name: Backup repository to local-like storage
         run: |
@@ -54,11 +56,12 @@ jobs:
           rsync -av --exclude "local_backups" ./ "$BACKUP_DIR"/
           echo "✅ Backup completed at $BACKUP_DIR"
 
-      - name: Python syntax check for notion_insert.py
+      - name: Python syntax check (preflight)
         run: |
           set -e
+          # 実行前に構文エラーを検出して即failさせる
           python -m py_compile scripts/notion_insert.py
-          echo "✅ Python syntax check passed for notion_insert.py"
+          echo "✅ Syntax OK"
 
       - name: Run production Notion insert
         env:
@@ -66,12 +69,18 @@ jobs:
           DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
           NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          X_API_KEY: ${{ secrets.X_API_KEY }}
+          X_API_SECRET: ${{ secrets.X_API_SECRET }}
+          X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
+          X_ACCESS_SECRET: ${{ secrets.X_ACCESS_SECRET }}
         run: |
           set -e
-          echo "=== 本番 Notion 登録開始 ==="
+          echo "=== 本番実行開始 ==="
+          echo "Notion登録を実行中..."
           python scripts/notion_insert.py
-          echo "✅ 本番 Notion 登録が完了しました"
-          echo "=== 本番 Notion 登録終了 ==="
+          echo "Notion登録（本番）が成功しました"
+          echo "=== 本番実行終了 ==="
 
       - name: Send Slack notification (success)
         if: success()
