--- a/.github/workflows/notion_insert_prod.yml
+++ b/.github/workflows/notion_insert_prod.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           set -e
           python -m pip install --upgrade pip
-          # 必須パッケージ（deep-translator を含む）
+          # 必須パッケージ（deep-translator / bs4 など）
           python -m pip install feedparser deep-translator requests beautifulsoup4
           # 依存の存在を検証（無ければ即fail）
           python - <<'PY'
@@ -79,7 +79,7 @@ jobs:
           echo "=== 本番実行開始 ==="
           echo "Notion登録を実行中..."
           python scripts/notion_insert.py
-          echo "Notion登録（本番）が成功しました"
+          echo "Notion登録（本番）が成功しました」
           echo "=== 本番実行終了 ==="
 
       - name: Send Slack notification (success)
