--- a/.github/workflows/notion_insert_prod.yml
+++ b/.github/workflows/notion_insert_prod.yml
@@ -2,10 +2,32 @@ name: Notion Insert Prod
 
 on:
   workflow_dispatch:
+  schedule:
+    # UTC基準で6時間間隔（00/06/12/18）。アジア始業、欧州朝、米統計、米午後帯をカバー
+    - cron: "0 0 * * *"
+    - cron: "0 6 * * *"
+    - cron: "0 12 * * *"
+    - cron: "0 18 * * *"
+
+# 同時実行の衝突を防止（スケジュール重複対策）
+concurrency:
+  group: notion-insert-prod
+  cancel-in-progress: true
+
+# 最小権限
+permissions:
+  contents: read
 
 jobs:
   insert_prod:
     runs-on: ubuntu-latest
+    env:
+      RUN_START_MSG: "=== 本番実行開始 ==="
+      RUN_DOING_MSG: "Notion登録を実行中..."
+      RUN_SUCCESS_MSG: "Notion登録（本番）が成功しました"
+      RUN_END_MSG: "=== 本番実行終了 ==="
+      SLACK_SUCCESS_TEXT: "✅ Notion登録（本番）が成功しました"
+      SLACK_FAILURE_TEXT: "❌ Notion登録（本番）が失敗しました（依存/Secrets/実行を確認してください）"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,7 +42,7 @@ jobs:
         run: |
           set -e
           python -m pip install --upgrade pip
-          # 必須パッケージ（deep-translator / bs4 など）
+          # 必須パッケージ（deep-translator を含む）
           python -m pip install feedparser deep-translator requests beautifulsoup4
           # 依存の存在を検証（無ければ即fail）
           python - <<'PY'
@@ -76,18 +98,18 @@ jobs:
           X_ACCESS_SECRET: ${{ secrets.X_ACCESS_SECRET }}
         run: |
           set -e
-          echo "=== 本番実行開始 ==="
-          echo "Notion登録を実行中..."
+          echo "$RUN_START_MSG"
+          echo "$RUN_DOING_MSG"
           python scripts/notion_insert.py
-          echo "Notion登録（本番）が成功しました"
-          echo "=== 本番実行終了 ==="
+          echo "$RUN_SUCCESS_MSG"
+          echo "$RUN_END_MSG"
 
       - name: Send Slack notification (success)
         if: success()
         uses: slackapi/slack-github-action@v1.24.0
         with:
           payload: |
-            { "text": "✅ Notion登録（本番）が成功しました" }
+            { "text": "${{ env.SLACK_SUCCESS_TEXT }}" }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
@@ -97,7 +119,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.24.0
         with:
           payload: |
-            { "text": "❌ Notion登録（本番）が失敗しました（依存/Secrets/実行を確認してください）" }
+            { "text": "${{ env.SLACK_FAILURE_TEXT }}" }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
