--- a/.github/workflows/notion_insert_prod.yml
+++ b/.github/workflows/notion_insert_prod.yml
@@ -3,11 +3,12 @@ name: Notion Insert Prod
 on:
   workflow_dispatch:
   schedule:
-    # UTC基準で6時間間隔（00/06/12/18）。アジア始業、欧州朝、米統計、米午後帯をカバー
-    - cron: "0 0 * * *"
-    - cron: "0 6 * * *"
-    - cron: "0 12 * * *"
-    - cron: "0 18 * * *"
+    # UTC基準で6時間間隔（00/06/12/18）、各時間の02分に発火
+    # アジア始業、欧州朝、米統計、米午後帯をカバー
+    - cron: "2 0 * * *"
+    - cron: "2 6 * * *"
+    - cron: "2 12 * * *"
+    - cron: "2 18 * * *"
 
 # 同時実行の衝突を防止（スケジュール重複対策）
 concurrency:
