--- a/.github/workflows/post_to_x_prod.yml
+++ b/.github/workflows/post_to_x_prod.yml
@@ -8,8 +8,7 @@ on:
         required: false
         default: "false"
   schedule:
-    # 毎時02分
-    - cron: "2 * * * *"
+    - cron: "2 * * * *" # 毎時02分
 
 concurrency:
   group: post-to-x-prod
@@ -68,6 +67,7 @@ jobs:
           _X_API_SECRET: ${{ secrets.X_API_SECRET }}
           _X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           _X_ACCESS_SECRET: ${{ secrets.X_ACCESS_SECRET }}
+          _X_BEARER_TOKEN: ${{ secrets.X_BEARER_TOKEN }} # 任意
           _SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           _NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           _NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
@@ -83,57 +83,4 @@ jobs:
               echo "❌ Secret seems too short: ${s#_}" >&2
               exit 1
             fi
-          done
-          echo "✅ All required secrets for PROD are present."
-
-      - name: Backup repository to local-like storage
-        run: |
-          set -e
-          BACKUP_DIR="local_backups/$(date +'%Y%m%d_%H%M%S')"
-          mkdir -p "$BACKUP_DIR"
-          rsync -av --exclude "local_backups" ./ "$BACKUP_DIR"/
-          echo "✅ Backup completed at $BACKUP_DIR"
-
-      - name: Python syntax check (preflight)
-        run: |
-          set -e
-          python -m py_compile scripts/post_to_x.py
-          echo "✅ Syntax OK"
-
-      - name: Run production X post (v2)
-        env:
-          X_API_KEY: ${{ secrets.X_API_KEY }}
-          X_API_SECRET: ${{ secrets.X_API_SECRET }}
-          X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
-          X_ACCESS_SECRET: ${{ secrets.X_ACCESS_SECRET }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-          NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-          DRY_RUN: ${{ inputs.DRY_RUN }}
-        run: |
-          set -e
-          echo "$RUN_START_MSG"
-          echo "$RUN_DOING_MSG"
-          python scripts/post_to_x.py
-          echo "$RUN_SUCCESS_MSG"
-          echo "$RUN_END_MSG"
-
-      - name: Send Slack notification (success)
-        if: success()
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          payload: |
-            { "text": "${{ env.SLACK_SUCCESS_TEXT }}" }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-
-      - name: Send Slack notification (failure)
-        if: failure()
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          payload: |
-            { "text": "${{ env.SLACK_FAILURE_TEXT }}" }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+            orig_len=$(printf %s "$val" | wc_
